# commit-wizard

./: .cwizard.toml  .dockerignore  .editorconfig  .gitignore  .lefthook.yml  .mise.toml  CONTRIBUTING.md  LICENSE-APACHE  Makefile  README.md  justfile  taskfile.yml  tcat.toml
workspace/: Cargo.toml  deny.toml
workspace/crates/commit-wizard/: Cargo.toml
workspace/crates/commit-wizard/src/: cli.rs  lib.rs  main.rs
workspace/crates/commit-wizard/src/adapters/config/: file.rs
workspace/crates/commit-wizard/src/adapters/editor/: noop.rs
workspace/crates/commit-wizard/src/adapters/git/: cmd.rs  mod.rs  noop.rs
workspace/crates/commit-wizard/src/adapters/prompt/: mod.rs  noop.rs  tty.rs
workspace/crates/commit-wizard/src/application/: usecases.rs
workspace/crates/commit-wizard/src/cli/: args.rs  mod.rs
workspace/crates/commit-wizard/src/cli/cmd/: mod.rs
workspace/crates/commit-wizard/src/cli/cmd/add/: mod.rs
workspace/crates/commit-wizard/src/cli/cmd/bump/: mod.rs
workspace/crates/commit-wizard/src/cli/cmd/check/: mod.rs
workspace/crates/commit-wizard/src/cli/cmd/commit/: mod.rs
workspace/crates/commit-wizard/src/cli/cmd/config/: mod.rs
workspace/crates/commit-wizard/src/cli/cmd/doctor/: mod.rs
workspace/crates/commit-wizard/src/cli/cmd/init/: mod.rs
workspace/crates/commit-wizard/src/cli/cmd/push/: mod.rs
workspace/crates/commit-wizard/src/cli/cmd/tag/: mod.rs
workspace/crates/commit-wizard/src/core/: bootstrap.rs  context.rs  error.rs  mod.rs
workspace/crates/commit-wizard/src/core/usecases/: doctor.rs  mod.rs
workspace/crates/commit-wizard/src/core/usecases/commit/: check.rs  make.rs  mod.rs  push.rs
workspace/crates/commit-wizard/src/core/usecases/configs/: edit.rs  init.rs
workspace/crates/commit-wizard/src/core/usecases/usage/: stage.rs
workspace/crates/commit-wizard/src/core/usecases/version/: bump.rs  mod.rs  tag.rs
workspace/crates/commit-wizard/src/domain/: commit.rs  errors.rs  mod.rs
workspace/crates/commit-wizard/src/engine/: mod.rs
workspace/crates/commit-wizard/src/engine/capabilities/: mod.rs
workspace/crates/commit-wizard/src/engine/capabilities/commit/: check.rs  mod.rs  push.rs
workspace/crates/commit-wizard/src/engine/capabilities/config/: edit.rs  init.rs  mod.rs  show.rs
workspace/crates/commit-wizard/src/engine/capabilities/runtime/: mod.rs
workspace/crates/commit-wizard/src/engine/capabilities/usage/: stage.rs
workspace/crates/commit-wizard/src/engine/capabilities/versioning/: mod.rs
workspace/crates/commit-wizard/src/engine/config/: env.rs  mod.rs  registry.rs  resolver.rs  rules.rs  schema.rs
workspace/crates/commit-wizard/src/engine/config/base/: mod.rs  types.rs
workspace/crates/commit-wizard/src/engine/constants/: emoji.rs  env.rs  mod.rs  paths.rs
workspace/crates/commit-wizard/src/engine/constants/defaults/: config.rs  mod.rs  policy.rs
workspace/crates/commit-wizard/src/engine/error/: code.rs  kind.rs  mod.rs
workspace/crates/commit-wizard/src/engine/fs/: mod.rs
workspace/crates/commit-wizard/src/engine/models/: git.rs  mod.rs
workspace/crates/commit-wizard/src/engine/models/policy/: ai.rs  branch.rs  changelog.rs  check.rs  commit.rs  enforcement.rs  hooks.rs  mod.rs  push.rs  (+2 more)
workspace/crates/commit-wizard/src/engine/traits/: logger.rs  mod.rs  prompt.rs
workspace/crates/commit-wizard/src/infra/: mod.rs
workspace/crates/commit-wizard/src/infra/git/: mod.rs
workspace/crates/commit-wizard/src/infra/ui/: logger.rs  mod.rs  prompt.rs
workspace/crates/commit-wizard/src/ports/: config.rs  editor.rs  git.rs  mod.rs  prompt.rs
(+61 files in other folders)
