[workspace]
resolver = "2"
members = [
    "crates/commit-wizard",
]

[workspace.package]
edition = "2024"
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = ["KiTech Software <oss@kitechsoftware.com>"]

[workspace.dependencies]
anyhow = "1.0.98"

chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
git2 = "0.20.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tempfile = "3.20.0"
thiserror = "2.0.16"
toml = "1.1.2"

assert_cmd = "2"
assert_matches = "1.5.0"
predicates = "3"
