[workspace]
resolver = "2"
members = [
    "crates/commit-wizard",
]

[workspace.package]
edition = "2024"
version = "0.0.2"
license = "MIT OR Apache-2.0"
authors = ["KiTech Software <oss@kitechsoftware.com>"]

[workspace.dependencies]
commit-wizard = { path = "crates/commit-wizard" }
scriba = { version = "0.5", features = ["full"] }
cliai = "0.2.0"

chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
inquire = { version = "0.9.4", features = ["date", "editor"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
git2 = "0.20.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tempfile = "3.20.0"
thiserror = "2.0.16"
tabled = "0.20.0"
toml = "0.9.2"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }

assert_cmd = "2"
assert_matches = "1.5.0"
predicates = "3"
assert_fs = "1.1.3"

directories = "6.0.0"
serde_with = "3.14.1"
toml_edit = "0.23.6"

owo-colors = "4.2.3"
