[package]
name = "commit-wizard"
description = "A lightweight CLI assistant for Conventional Commits, semantic versioning, and changelog automation."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/kitechsoftware/commit-wizard"
homepage = "https://commit-wizard.kitechsoftware.com"
documentation = "https://docs.rs/commit-wizard"
readme.workspace = true
keywords = ["cli", "conventional-commits"]
categories = ["command-line-utilities"]
publish = true

[[bin]]
name = "cw"
path = "src/main.rs"

[dependencies]
scriba.workspace = true
cliai.workspace = true

chrono.workspace = true
clap.workspace = true
dialoguer.workspace = true
dirs.workspace = true
git2.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio.workspace = true
tabled.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

assert_cmd.workspace = true
assert_matches.workspace = true
predicates.workspace = true
